# src/main/java/se/sundsvall/oepintegrator/api/WebmessageResource.java
@@ -7,6 +7,7 @@ import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 import static org.springframework.http.MediaType.APPLICATION_PROBLEM_JSON_VALUE;
 import static org.springframework.http.MediaType.MULTIPART_FORM_DATA_VALUE;
 import static org.springframework.http.ResponseEntity.created;
+import static org.springframework.http.ResponseEntity.ok;
 import static org.springframework.web.util.UriComponentsBuilder.fromPath;
 
 import io.swagger.v3.oas.annotations.Operation;
@@ -45,7 +46,7 @@ import se.sundsvall.oepintegrator.service.WebmessageService;
 @ApiResponse(responseCode = "400", description = "Bad request", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(oneOf = {
 	Problem.class, ConstraintViolationProblem.class
 })))
-@Tag(name = "WebMessages", description = "Resource for sending web messages to OpenE")
+@Tag(name = "Webmessages", description = "Resource for sending webmessages to OpenE")
 class WebmessageResource {
 
 	private final WebmessageService webmessageService;
@@ -55,7 +56,7 @@ class WebmessageResource {
 	}
 
 	@PostMapping(consumes = MULTIPART_FORM_DATA_VALUE, produces = ALL_VALUE)
-	@Operation(summary = "Create web message", responses = {
+	@Operation(summary = "Create webmessage", responses = {
 		@ApiResponse(responseCode = "201", headers = @Header(name = LOCATION, schema = @Schema(type = "string")), description = "Successful operation", useReturnTypeSchema = true)
 	})
 	ResponseEntity<Void> createWebmessage(
@@ -69,11 +70,11 @@ class WebmessageResource {
 			.build();
 	}
 
-	@GetMapping(path = "/{familyId}", produces = APPLICATION_JSON_VALUE)
-	@Operation(summary = "Get all web messages for a familyId", responses = {
+	@GetMapping(path = "/familyId/{familyId}", produces = APPLICATION_JSON_VALUE)
+	@Operation(summary = "Get all webmessages for a familyId", responses = {
 		@ApiResponse(responseCode = "200", description = "Successful operation", content = @Content(mediaType = APPLICATION_JSON_VALUE, schema = @Schema(implementation = WebmessageRequest.class)))
 	})
-	ResponseEntity<List<Webmessage>> getWebmessages(
+	ResponseEntity<List<Webmessage>> getWebmessagesByFamilyId(
 		@Parameter(name = "municipalityId", description = "Municipality id", example = "2281") @ValidMunicipalityId @PathVariable final String municipalityId,
 		@Parameter(name = "instanceType", description = "Which instanceType a message should be sent to", example = "1") @PathVariable final InstanceType instanceType,
 		@Parameter(name = "familyId", description = "Family id", example = "123") @PathVariable final String familyId,
@@ -81,6 +82,21 @@ class WebmessageResource {
 			iso = DateTimeFormat.ISO.DATE_TIME) final LocalDateTime fromDateTime,
 		@Parameter(name = "toDateTime", description = "The end date and time for filtering web messages (optional).", example = "2024-01-31T12:00:00") @RequestParam(required = false) @DateTimeFormat(
 			iso = DateTimeFormat.ISO.DATE_TIME) final LocalDateTime toDateTime) {
-		return ResponseEntity.ok(webmessageService.getWebmessages(municipalityId, instanceType, familyId, fromDateTime, toDateTime));
+		return ok(webmessageService.getWebmessagesByFamilyId(municipalityId, instanceType, familyId, fromDateTime, toDateTime));
+	}
+
+	@GetMapping(path = "/flowInstanceId/{flowInstanceId}", produces = APPLICATION_JSON_VALUE)
+	@Operation(summary = "Get all webmessages for a given errand", responses = {
+		@ApiResponse(responseCode = "200", description = "Successful operation", content = @Content(mediaType = APPLICATION_JSON_VALUE, schema = @Schema(implementation = WebmessageRequest.class)))
+	})
+	ResponseEntity<List<Webmessage>> getWebmessagesByFlowInstanceId(
+		@Parameter(name = "municipalityId", description = "Municipality id", example = "2281") @ValidMunicipalityId @PathVariable final String municipalityId,
+		@Parameter(name = "instanceType", description = "Which instanceType a message should be sent to", example = "1") @PathVariable final InstanceType instanceType,
+		@Parameter(name = "flowInstanceId", description = "Flow instance id", example = "123") @PathVariable final String flowInstanceId,
+		@Parameter(name = "fromDateTime", description = "The start date and time for filtering web messages (optional)", example = "2024-01-31T12:00:00") @RequestParam(required = false) @DateTimeFormat(
+			iso = DateTimeFormat.ISO.DATE_TIME) final LocalDateTime fromDateTime,
+		@Parameter(name = "toDateTime", description = "The end date and time for filtering web messages (optional).", example = "2024-01-31T12:00:00") @RequestParam(required = false) @DateTimeFormat(
+			iso = DateTimeFormat.ISO.DATE_TIME) final LocalDateTime toDateTime) {
+		return ok(webmessageService.getWebmessagesByFlowInstanceId(municipalityId, instanceType, flowInstanceId, fromDateTime, toDateTime));
 	}
 }
